@@ -3,6 +3,7 @@ Version 2.4
 * Require difxio 2.5
 * Fix numbering of FITS Source IDs
 * Better handle transitional scans
+* don't use bcopy -- use memcpy instead.
 
 Version 2.3
 * Support for writing FITS files larger than 2 GiB
